# SideScroller

./: .gitignore  CMakeLists.txt  Game.cpp  README.md  main.cpp  player.cpp
src/: Collision.cpp  Collision.h  Components.cpp  Components.h  ECS.cpp  ECS.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp  player.h
src/ECS/: ColliderComponent.h  Components.h  ECS.h  KeyboardController.h  PositionComponent.h  SpriteComponent.h  TransformComponent.h
